--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -86,6 +86,7 @@ $red: #FF0000;
 $modal-text: #CCCCCC;
 $bg-light-blue: #E6F1FA;
 $quote-gray: #7a7a7a;
+$footer-gray: #999999;
 
 // base sizes
 $bPadding: 60px;
