--- a/statamic/_themes/main/partials/footer.html
+++ b/statamic/_themes/main/partials/footer.html
@@ -31,15 +31,15 @@
 	<div class="footer-divider"></div>
 	<div class="container">
 		<div class="grid-6">&copy; {{ current_date format="Y"}} Leslie J. Garfield &amp; Co., Inc. All Rights Reserved.</div>
-		<div class="grid-6 social">
+		<div class="grid-6 social right-align footer">
 			<a href="{{ globals:facebook }}" target="_blank">
-					<i class="fa fa-facebook"></i>
+				<i class="fa fa-facebook"></i>
 			</a>
 			<a href="https://twitter.com/{{ globals:twitter }}" target="_blank">
-					<i class="fa fa-twitter"></i>
+				<i class="fa fa-twitter"></i>
 			</a>
 			<a href="https://instagram.com/{{ globals:instagram }}" target="_blank">
-					<i class="fa fa-instagram"></i>
+				<i class="fa fa-instagram"></i>
 			</a>
 		</div>
 	</div>
