--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -43,31 +43,18 @@
 
 				<div class="property-header">
 					<h2>{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
-
-					<div class="social">
+					<div class="social right-align gray">
 						<a href="">
-							<span class="fa-stack fa-lg">
-								<i class="fa fa-circle fa-stack-2x"></i>
-								<i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-							</span>
+							<i class="fa fa-envelope fa-lg"></i>
 						</a>
 						<a href="">
-							<span class="fa-stack fa-lg">
-								<i class="fa fa-circle fa-stack-2x"></i>
-								<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-							</span>
+							<i class="fa fa-twitter fa-lg"></i>
 						</a>
 						<a href="javascript:selectPinImage()">
-							<span target="_blank" class="fa-stack fa-lg">
-								<i class="fa fa-circle fa-stack-2x"></i>
-								<i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-							</span>
+							<i class="fa fa-pinterest fa-lg"></i>
 						</a>
 						<a href="javascript:fbShare('{{ url }}', 'Fb Share', '{{ url }}', '{{ url }}', 500, 250)">
-							<span  class="fa-stack fa-lg">
-								<i class="fa fa-circle fa-stack-2x"></i>
-								<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-							</span>
+							<i class="fa fa-facebook fa-lg"></i>
 						</a>
 					</div>
 				</div>
