--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -31,6 +31,10 @@ a {
     color: $text-green;
     text-decoration: none;
   }
+  .no-click {
+    cursor: default;
+    * {cursor: default;}
+  }
 }
 
 .fa-stack {
