--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -33,29 +33,10 @@
 		margin: 0 10px 0 5px;
 	}
 	.property-header {
-		@include clearfix;
+		@include flex-hor;
+		justify-content: space-between;
 		h2 {
 			color: $header-font-color;
-			margin: 0 0 10px 0;
-			@include span (7 of 9);
-		}
-		.social {
-			@include span (last 2 of 9);
-			a {
-				float: right;
-				margin-left: 10px;
-				margin-right: 0;
-				.fa-circle {
-					border: 1px solid $light-font-color;
-				}
-				.fa-inverse {
-					color: $light-font-color;
-				}
-			}
-		}
-		span {
-			@include hbase($hFontM);
-			color: $light-font-color;
 		}
 	}
 	.property-subheader {
