--- a/statamic/_themes/main/partials/blog_social.html
+++ b/statamic/_themes/main/partials/blog_social.html
@@ -1,26 +1,17 @@
 <span class="date">Posted {{ date }} by </span>
 {{ relate:author }}
-	<a class="author" href="{{ _site_root }}blog/authors/{{ title|lower }}">
+<a class="author" href="{{ _site_root }}blog/authors/{{ title|lower }}">
 	{{ title }}
-	</a>
+</a>
 {{ /relate:author }}
-	<div class="social gray">
-		<a href="">
-			<span class="fa-stack fa-lg">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-			</span>
-		</a>
-		<a href="javascript:selectPinImage()">
-			<span target="_blank" class="fa-stack fa-lg">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-			</span>
-		</a>
-		<a href="javascript:fbShare('{{ url }}', 'Fb Share', '{{ url }}', '{{ url }}', 500, 250)">
-			<span  class="fa-stack fa-lg">
-				<i class="fa fa-circle fa-stack-2x"></i>
-				<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-			</span>
-		</a>
-	</div>
+<div class="social left light">
+	<a href="">
+		<i class="fa fa-twitter fa-lg"></i>
+	</a>
+	<a href="javascript:selectPinImage()">
+		<i class="fa fa-pinterest fa-lg"></i>
+	</a>
+	<a href="javascript:fbShare('{{ url }}', 'Fb Share', '{{ url }}', '{{ url }}', 500, 250)">
+		<i class="fa fa-facebook fa-lg"></i>
+	</a>
+</div>
