--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -14,7 +14,7 @@
 					<span class="name">{{ title }}</span>
 				</div>
 				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
-				<div href="{{ email}}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></div>
+				<a href="{{ email}}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
 			</div>
 			{{ else }}
 			<div class="grid-3-constrained-padding">
