--- a/src/scss/modules/_agents_tile.scss
+++ b/src/scss/modules/_agents_tile.scss
@@ -28,7 +28,7 @@
 			margin-bottom: 1em;
 		}
 	}
-	a:hover, span:hover {
+	a:hover, span:hover, div:hover {
 		img {
 			border: 2px solid $text-green;	
 		}
