--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4663,11 +4663,11 @@ footer .footer-divider {
 .agents a:hover, .agents span:hover {
   color: #009B77; }
 
-.agents a:hover img, .agents span:hover img {
-  border: 2px solid #009B77; }
-
 .agents a:hover svg *, .agents span:hover svg * {
   fill: #009B77; }
+
+.agents img:hover {
+  border: 2px solid #009B77; }
 
 .agents .grid-3-constrained-padding * {
   vertical-align: middle; }
