--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -94,6 +94,12 @@ p {
     }
 }
 
+&.large {
+    p {
+        @include hlmedium($hFontM);
+        text-align: center;
+    }
+}
 
 .section-title {
     @include bbasebold;
