--- a/statamic/_themes/main/partials/blog_social.html
+++ b/statamic/_themes/main/partials/blog_social.html
@@ -4,7 +4,7 @@
 	{{ title }}
 </a>
 {{ /relate:author }}
-<div class="social left light">
+<div class="social block left-align light">
 	<a href="">
 		<i class="fa fa-twitter fa-lg"></i>
 	</a>
