--- a/statamic/_themes/main/partials/featured_post.html
+++ b/statamic/_themes/main/partials/featured_post.html
@@ -9,7 +9,7 @@
 			{{ title }}
 			</a>
 		{{ /relate:author }}
-		<div class="social left green">
+		<div class="social block left-align green">
 			<a href="">
 				<i class="fa fa-twitter fa-lg"></i>
 			</a>
