--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -79,15 +79,21 @@
 					<span>GET IN CONTACT ></span>
 				</a>
 			</div>
-		{{ insights }}
 			<div class="grid-4 centered">
-				<a href="{{ link }}" class="insight-tile">
-					<h3>{{ headline }}</h3>
-					<p>{{ info }}</p>
-					<span>{{ link_title }} ></span>
+				<a href="{{ site_url }}reports" class="insight-tile">
+					<h3>Latest Opinion</h3>
+					<p>The latest thoughts and opinions on New York Real Estate from the Garfield team</p>
+					<span>VISIT OUR BLOG ></span>
 				</a>
 			</div>
-		{{ /insights }}
+			<div class="grid-4 centered">
+				<a href="{{ site_url }}/blog" class="insight-tile">
+					<h3>Research &amp; Insights</h3>
+					<p>Trends, analysis and forecasts for New York’s small buildings and townhouse market</p>
+					<span>SEE THE LATEST REPORT ></span>
+				</a>
+			</div>
+
 		</div>
 	</section>
 		<section class="circle-icon light-gray-bg" id="featured-properties">
