--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -17,9 +17,9 @@
 			{{ /reports }}
 			</ul>
 
-			<a class="report-expander expander-next green centered" href="">
-				<i class="fa fa-plus-circle light-gray large"></i>
-				<span class="large">More Reports</span>
+			<a class="report-expander expander-next gray centered" href="">
+				<i class="fa fa-plus-circle gray large"></i>
+				<span class="large">MORE REPORTS</span>
 			</a>
 
 			<ul style="display: none" class="grid-constrained">
