--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -9,7 +9,7 @@
 			{{ entries:listing folder="agents/garfield" }}
 			{{ if first }}
 			<div class="grid-3-constrained-padding">
-				<div>
+				<div class="">
 					<img class="circle" src="{{ path src="{{ image }}" }}"></img>
 					<span class="name">{{ title }}</span>
 				</div>
@@ -38,8 +38,7 @@
 					<img class="circle" src="{{ path src="{{ image }}" }}"></img>
 					<span class="name">{{ title }}</span>
 				</a>
-				<span class="details">{{ theme:partial src="svg/phone" }} {{ phone }}</span>
-				<a href="{{ email}}">{{ theme:partial src="svg/mail" }} <span class="details">{{ email }}</span></a>
+				<a href="{{ email}}"><span class="details">{{ theme:partial src="svg/mail" }} {{ email }}</span></a>
 			</div>
 
 			{{ /entries:listing }}
