--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -74,7 +74,7 @@
 			<p class="light">* These numbers are averages and fluctuate frequently. Contact us for the most up-to-date data on NYC neighborhoods and blocks.</p>
 		</div>
 	</section>
-	<section class="dark-bg-seafoam">
+	<section class="bg-seafoam">
 		<a id="other_properties" class="secondary-nav-link"></a>
 		<div class="container">
 			<div class="section-title">CURRENT PROPERTIES IN THIS NEIGHBORHOOD</div>
