--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -42,7 +42,7 @@
 			<div class="property-info">
 
 				<div class="property-header">
-					<h2>{{if apartment }}, {{ apartment }}{{ endif }}</h2>
+					<h2>{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
 					<div class="social gray">
 						<a href="">
 							<i class="fa fa-envelope fa-lg"></i>
