--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -43,7 +43,7 @@
 
 				<div class="property-header">
 					<h2>{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
-					<div class="social gray">
+					<div class="social right-align gray">
 						<a href="">
 							<i class="fa fa-envelope fa-lg"></i>
 						</a>
