--- a/statamic/_themes/main/templates/taxonomies.html
+++ b/statamic/_themes/main/templates/taxonomies.html
@@ -10,20 +10,20 @@
 					<h2 class="blog-header">{{ taxonomy_name|title }}</h2>
 					<div class="entries">
 					{{ entries:listing folder="blog" limit="5" taxonomy="true" }}
-					<div class="entry">
-					<div class="preview-image-container">
-						<a href="{{ url }}" class="preview-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
-					</div>
-						<div class="preview">
-							<a href="{{ url }}"><h2>{{ title }}</h2></a>
-							<div class="divider"></div>
-							{{ theme:partial src="blog_social" use_context="true" }}
-							<div class="truncated">
-								{{ content|truncate:200 }}
-								<a class="read-more" href="{{ url }}">Read More</a>
+						<div class="entry">
+							<div class="preview-image-container">
+								<a href="{{ url }}" class="preview-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
+							</div>
+							<div class="preview">
+								<a href="{{ url }}"><div class="blog-title">{{ title }}</div></a>
+								<div class="divider"></div>
+								{{ theme:partial src="blog_social" use_context="true" }}
+								<div class="truncated">
+									{{ content|truncate:100 }}
+									<a class="read-more" href="{{ url }}">Read More</a>
+								</div>
 							</div>
 						</div>
-					</div>
 					{{ /entries:listing }}
 				</div>
 				</div>
