--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -22,7 +22,7 @@
 				{{ if currency|not_empty }}
 				{{ if currency == "sterling" }}
 				&#163;{{ price|format_number }}
-				{{ elseif currency == "euro" }}
+				{{ elseif currency == "euros" }}
 				&#128;{{ price|format_number }}
 				{{ elseif currency == "dollar" }}
 				${{ price|format_number }}
