--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -9,7 +9,7 @@
 			{{ entries:listing folder="agents/garfield" }}
 			{{ if first }}
 			<div class="grid-3-constrained-padding">
-				<div class="">
+				<div>
 					<img class="circle" src="{{ path src="{{ image }}" }}"></img>
 					<span class="name">{{ title }}</span>
 				</div>
