--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -27,21 +27,25 @@
 				<div>
 				{{ if link === "" }}
 				 <div class="carousel-tile press-item">
-				 	{{ if image|not_empty }}
-				 	<img src="{{ path src="{{ image }}" }}">
-				 	{{ endif }}
-				 	{{ if text|not_empty }}
-				 	<p>{{ text }}</p>
-				 	{{ endif }}
+					<div>
+						{{ if image|not_empty }}
+						<img src="{{ path src="{{ image }}" }}">
+						{{ endif }}
+						{{ if text|not_empty }}
+						<p>{{ text }}</p>
+						{{ endif }}
+					</div>
 				 </div>
 				 {{ else }}
 				 <a target="_blank" href="{{ link }}" class="carousel-tile press-item">
-				 	{{ if image|not_empty }}
-				 	<img src="{{ path src="{{ image }}" }}">
-				 	{{ endif }}
-				 	{{ if text|not_empty }}
-				 	<p>{{ text }}</p>
-				 	{{ endif }}
+					<div>
+						{{ if image|not_empty }}
+						<img src="{{ path src="{{ image }}" }}">
+						{{ endif }}
+						{{ if text|not_empty }}
+						<p>{{ text }}</p>
+						{{ endif }}
+					</div>
 				 </a>
 				{{ endif }}
 				 </div>
@@ -54,21 +58,25 @@
 				<div>
 				{{ if link === "" }}
 				 <div class="carousel-tile press-item">
-				 	{{ if image|not_empty }}
-				 	<img src="{{ path src="{{ image }}" }}">
-				 	{{ endif }}
-				 	{{ if text|not_empty }}
-				 	<p>{{ text }}</p>
-				 	{{ endif }}
+					<div>
+						{{ if image|not_empty }}
+						<img src="{{ path src="{{ image }}" }}">
+						{{ endif }}
+						{{ if text|not_empty }}
+						<p>{{ text }}</p>
+						{{ endif }}
+					</div>
 				 </div>
 				 {{ else }}
 				 <a target="_blank" href="{{ link }}" class="carousel-tile press-item">
-				 	{{ if image|not_empty }}
-				 	<img src="{{ path src="{{ image }}" }}">
-				 	{{ endif }}
-				 	{{ if text|not_empty }}
-				 	<p>{{ text }}</p>
-				 	{{ endif }}
+					<div>
+						{{ if image|not_empty }}
+						<img src="{{ path src="{{ image }}" }}">
+						{{ endif }}
+						{{ if text|not_empty }}
+						<p>{{ text }}</p>
+						{{ endif }}
+					</div>
 				 </a>
 				{{ endif }}
 				 </div>
