--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -7,7 +7,7 @@
 		<div class="company beliefs">
 			<span class="company-title">OUR BELIEFS</span>
 			<div class="divider"></div>
-			<span>{{ beliefs }}</span>
+			<p class="intro-section">{{ beliefs }}</p>
 		</div>
 	</section>
 	<section>
