--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -16,7 +16,7 @@
 		<a id="description" class="secondary-nav-link"></a>
 		<div class="container large-body">
 			<div class="section-title">DESCRIPTION</div>
-			{{ description }}
+			<p class="intro-section">{{ description }}</p>
 		</div>
 	</section>
 	<section class="neighborhood bg-gray">
