--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3062,6 +3062,13 @@ footer .footer-divider {
 
 .property-info .property-subheader .location {
   box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: 1.25%;
+  padding-right: 1.25%; }
+
+.property-info .property-subheader .location.split {
+  box-sizing: border-box;
   width: 55.55556%;
   float: left;
   padding-left: 1.11111%;
