--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -44,7 +44,7 @@
 				<div class="property-header">
 					<h2>{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
 					<div class="social right-align gray">
-						<a href="mailto:?subject={{ title }} - Property Found on lesliegarfield.com&body={{ url }}">
+						<a href="mailto:?subject={{ title }} - Property Found on lesliegarfield.com&body={{ _site_url }}/{{ url }}">
 							<i class="fa fa-envelope fa-lg"></i>
 						</a>
 						<a href="">
