--- a/statamic/_themes/main/partials/blog_social.html
+++ b/statamic/_themes/main/partials/blog_social.html
@@ -5,7 +5,7 @@
 </a>
 {{ /relate:author }}
 <div class="social block left-align light">
-	<a href="">
+	<a href="https://twitter.com/intent/tweet?url={{ _site_url }}{{ url }}">
 		<i class="fa fa-twitter fa-lg"></i>
 	</a>
 	<a href="javascript:selectPinImage()">
