--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -47,7 +47,7 @@
 						<a href="mailto:?subject={{ title }} - Property Found on lesliegarfield.com&body={{ _site_url }}{{ url }}">
 							<i class="fa fa-envelope fa-lg"></i>
 						</a>
-						<a href="">
+						<a href="https://twitter.com/intent/tweet?url={{ _site_url }}{{ url }}">
 							<i class="fa fa-twitter fa-lg"></i>
 						</a>
 						<a href="javascript:selectPinImage()">
