--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -50,7 +50,7 @@
 						<a href="https://twitter.com/intent/tweet?url={{ _site_url }}{{ url }}">
 							<i class="fa fa-twitter fa-lg"></i>
 						</a>
-						<a href="javascript:selectPinImage()">
+						<a href="javascript:pinIt();">
 							<i class="fa fa-pinterest fa-lg"></i>
 						</a>
 						<a href="javascript:fbShare('{{ url }}', 'Fb Share', '{{ url }}', '{{ url }}', 500, 250)">
